play button added

--- a/views/words.ejs
+++ b/views/words.ejs
@@ -29,7 +29,7 @@
                     <span><%= index %>&nbsp;: &nbsp;</span>
                         <div class="fa fa-volume-up" id="voice">
                             <span id ="curr-answer" class="hide" >&nbsp : &nbsp <%= wordObj.word %></span>
-                            
+                            <button class="btn-warning float-right" type="button" id="play">play</button>
                         </div>
                 </div>
             </div>
