save json and play button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,3 +54,23 @@ textarea {
 .float-center{
 margin-left:25%;
 }
+body {
+    margin:50px;
+  }
+  .progress {
+    position:relative;
+    height:70px;
+  }
+  .raised {
+    position:absolute;
+    left:10px;
+    top:9px;
+  }
+  .goal {
+    position:absolute;
+    right:10px;
+    top:9px;
+  }
+  .goal-div{
+      margin-top: 20px;
+  }
