--- a/views/words.ejs
+++ b/views/words.ejs
@@ -8,8 +8,22 @@
 
 </head>
 <body >
-
+        <div class=" container goal-div hide" >
+                <div class="progress progress-striped active"  style='height:50px'>
+                  
+                  <p class="alert alert-success raised  flaot-left"><strong>Raised: $1,031.00</strong></p>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                        <span class="sr-only">60% Complete</span>
+                      </div>
+                  <p class="alert alert-success goal float-right"><strong>Goal: $4,200.00</strong></p>
+                  
+                
+                </div>
+            </div>
     <div class="center" >
+            <div class="alert alert-info">
+                    <strong>Count : <%=count%></strong>
+            </div>
             <div class="alert alert-success hide" id="correct-ans">
                     <strong>Correct!</strong> Congrats, word is correct.
             </div>
@@ -76,7 +90,9 @@
             <button class="btn-warning float-right" type="button" id="next">Next</button>
         </div>
     </div>
-
+    <div class="float-center">
+        <button id='save-json' class ="button button-primary" href='/writeLatest'>Save Json</button>
+    </div>
 <script>
     function captureKeyBoard(e){
         console.log(e.which);
